<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/DETAIL_LL_TOP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/DETAIL_BTN_SYNC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sync" />

        <Button
            android:id="@+id/DETAIL_BTN_ASYNC"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_async" />
    </LinearLayout>

    <EditText
        android:id="@+id/DETAIL_ET_INPUT"
        android:hint="@string/et_nateon_modprofile_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DETAIL_LL_TOP" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DETAIL_ET_INPUT" >

        <LinearLayout
            android:id="@+id/DETAIL_LL_MAIN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/DETAIL_TV_RESULT"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>